--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -54,7 +54,7 @@ body {
   --yellow-dark: #FBCB44;
   --grey: #a1a1a1;
   --pink: #f7cfcf;
-  --pink-light: rgb(243, 212, 212);
+  --pink-light: #f3d4d4;
   --grey-light: rgb(236, 236, 236);
 
   --header-height: 80px;
