--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -47,7 +47,7 @@ body {
   box-sizing: border-box;
   --white: #fff;
   --black: #252525;
-  --red: rgb(222, 16, 10);
+  --red: #de100a;
   --red-dark: #b30300;
   --yellow: #fde7aa;
   --yellow-light: #FFF4F4;
