--- a/components/Explanation/Explanation.module.scss
+++ b/components/Explanation/Explanation.module.scss
@@ -1,28 +1,54 @@
 @import "../../styles/helpers/mixins.scss";
 
 .container {
-  margin: 5.5rem 0 4rem;
+  margin: 3.5rem 0 4rem;
+
+  @include large_mobile {
+    margin-top: 2.5rem;
+  }
 
   &__wrapper {
     display: flex;
     flex-direction: column;
     gap: 2rem;
+
+    @include large_mobile {
+      gap: 1rem;
+    }
   }
+}
+
+.paragraph {
+  margin-bottom: 1rem;
 }
 
 .block {
   display: flex;
-  max-width: 80rem;
   margin: auto;
   background-color: var(--white);
   padding: 2rem;
   border-radius: 0.5rem;
   box-shadow: var(--box-shadow-small);
+  width: calc(100vw - 1rem);
+  max-width: 80rem;
   gap: 2rem;
 
-  @include mobile {
+  @include large_tablet {
+    padding: 1rem 1rem 1.5rem;
+    gap: 1.5rem;
+  }
+
+  @include tablet {
     flex-direction: column;
-    padding: 0 1rem;
+    gap: 1rem;
+
+    &:first-child, &:nth-child(3n) {
+      flex-direction: column-reverse;
+    }
+  }
+
+  @include large_mobile {
+    gap: 0;
   }
 
   &__list {
@@ -34,8 +60,12 @@
   }
 
   &__title {
-    padding-bottom: 1.5rem;
+    padding-bottom: 1rem;
     font-size: 1.5rem;
+
+    @include large_mobile {
+      padding-bottom: 0.5rem;
+    }
   }
 
   &__text {
@@ -51,6 +81,12 @@
 
 .img {
   object-fit: contain;
+  width: 100%;
+
+  @include large_tablet {
+    height: fit-content;
+    max-width: 30rem;
+  }
 
   @include mobile {
     width: 100%;
@@ -65,7 +101,6 @@
   
     @include mobile {
       margin-right: unset;
-      margin-bottom: 2rem;
     }
   }
 }
