--- a/components/Explanation/Explanation.module.scss
+++ b/components/Explanation/Explanation.module.scss
@@ -1,16 +1,23 @@
 @import "../../styles/helpers/mixins.scss";
 
 .container {
-  margin: 3.5rem 0 4rem;
-
-  @include large_mobile {
-    margin-top: 2.5rem;
-  }
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  padding: 5.5rem 0 4rem;
+  background-color: rgba($color: #fff, $alpha: 0.5);
 
   &__wrapper {
+    position: relative;
     display: flex;
     flex-direction: column;
     gap: 2rem;
+    max-width: 90rem;
+    width: calc(100vw - 1rem);
+    background-color: var(--white);
+    box-shadow: var(--box-shadow-small);
+    border-radius: 0.5rem;
+    padding-top: 2.5rem;
 
     @include large_mobile {
       gap: 1rem;
@@ -20,35 +27,41 @@
 
 .paragraph {
   margin-bottom: 1rem;
+
+  &:last-child {
+    margin: 0;
+  }
 }
 
 .block {
   display: flex;
   margin: auto;
-  background-color: var(--white);
   padding: 2rem;
   border-radius: 0.5rem;
-  box-shadow: var(--box-shadow-small);
-  width: calc(100vw - 1rem);
-  max-width: 80rem;
   gap: 2rem;
 
   @include large_tablet {
-    padding: 1rem 1rem 1.5rem;
+    padding: 1rem 1rem 0;
     gap: 1.5rem;
   }
-
-  @include tablet {
-    flex-direction: column;
-    gap: 1rem;
-
-    &:first-child, &:nth-child(3n) {
-      flex-direction: column-reverse;
+  
+  &:last-child {
+    @include large_tablet {
+      padding: 1rem 1rem 2rem;
+      gap: 1.5rem;
     }
   }
 
-  @include large_mobile {
-    gap: 0;
+  @include tablet {
+    flex-direction: column-reverse;
+
+    &:first-child, &:nth-child(3n) {
+      flex-direction: column;
+    }
+
+    &:last-child {
+      flex-direction: column-reverse;
+    }
   }
 
   &__list {
