--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -3,14 +3,15 @@
 .container {
   display: flex;
   justify-content: center;
-  background-color: rgba($color: #f3d4d4, $alpha: 0.5);
-  padding-bottom: 3rem;
+  background-color: rgba($color: #fff, $alpha: 0.5);
+  padding-bottom: 2rem;
 
   &__wrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 0.5rem;
+    justify-content: space-between;
+    gap: 1rem;
 
     background-color: rgba($color: #fff, $alpha: 1);
     text-align: center;
@@ -19,10 +20,27 @@
     max-width: fit-content;
     border-radius: 0.5rem;
     box-shadow: var(--box-shadow-small);
-    margin-top: 3rem;
-
-    @include large_tablet {
-      margin-top: 6.5rem;
-    }
   }
+}
+
+.links {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  padding: 0 1rem;
+}
+
+.link {
+  cursor: pointer;
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+
+  & div {
+    cursor: pointer;
+  }
+}
+
+.copyright {
+
 }
