--- a/components/Hero/Hero.module.scss
+++ b/components/Hero/Hero.module.scss
@@ -28,7 +28,7 @@
 }
 
 .slogan {
-  background-color: rgba($color: #fff, $alpha: 0.95);
+  background-color: rgba($color: #fff, $alpha: 1);
   padding: 1rem 2rem;
   border-radius: 0.5rem;
   box-shadow: var(--box-shadow);
@@ -42,6 +42,10 @@
   }
 
   &__first {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    justify-content: center;
     font-weight: 600;
     font-size: 2rem;
 
