--- a/components/Roadmap/Roadmap.module.scss
+++ b/components/Roadmap/Roadmap.module.scss
@@ -1,11 +1,13 @@
 @import "../../styles/helpers/mixins.scss";
 
 .container {
-  margin-top: 6rem;
+  cursor: default;
+  padding: 2.5rem 0 3rem;
 
   display: flex;
-  width: 100%;
   justify-content: center;
+  // background-color: rgba($color: #f3d4d4, $alpha: 0.5);
+  background-color: rgba($color: #fff, $alpha: 0.5);
 
   &__wrapper {
     position: relative;
@@ -13,8 +15,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
-    max-width: 80rem;
+    width: calc(100vw - 1rem);
+    max-width: 90rem;
     text-align: center;
     gap: 1rem;
     padding: 1rem;
@@ -22,30 +24,6 @@
     box-shadow: var(--box-shadow-small);
     background-color: var(--white);
   }
-}
-
-.title {
-  background-color: rgba($color: #fff, $alpha: 0.95);
-  padding: 1rem 2rem;
-  border-radius: 0.5rem;
-  box-shadow: var(--box-shadow);
-  text-align: center;
-  width: 75%;
-  max-width: 20rem;
-
-  position: absolute;
-  top: 0;
-  left: 50%;
-  transform: translate(-48%, -60%);
-
-  &__text {
-    font-weight: 600;
-    font-size: 1.5rem;
-  }
-}
-
-.title {
-  font-size: 1.5rem;
 }
 
 .content {
