--- a/components/Avatars/Avatars.module.scss
+++ b/components/Avatars/Avatars.module.scss
@@ -43,6 +43,10 @@
   font-size: 1.5rem;
   padding: 0.5rem 0;
   margin-right: auto;
+
+  display: flex;
+  align-items: center;
+  gap: 1rem;
 }
 
 .text {
