--- a/components/FundUs/FundUs.module.scss
+++ b/components/FundUs/FundUs.module.scss
@@ -114,9 +114,10 @@
   color: white;
   gap: 0.5rem;
 
-  padding: 0.75rem 2rem;
+  padding: 1rem 2rem;
   border-radius: 0.25rem;
   transition: all 0.5s;
+  font-size: 1.15rem;
 
   background: var(--red-gradient);
   background-size: 150%;
