--- a/styles/helpers/icons.scss
+++ b/styles/helpers/icons.scss
@@ -85,6 +85,14 @@
     background-image: url("../../public/assets/apple.svg");
   }
 
+  &__face {
+    background-image: url("../../public/assets/face.svg");
+  }
+
+  &__angel {
+    background-image: url("../../public/assets/angel.svg");
+  }
+
   &__policy {
     background-image: url("../../public/assets/policy.svg");
   }
