--- a/components/common/SectionTitle/SectionTitle.module.scss
+++ b/components/common/SectionTitle/SectionTitle.module.scss
@@ -9,7 +9,6 @@
   border-radius: 0.5rem;
   box-shadow: var(--box-shadow);
   text-align: center;
-  width: 95%;
   max-width: 20rem;
   font-size: 1.5rem;
 
@@ -22,4 +21,5 @@
 .text {
   font-weight: 600;
   font-size: 1.5rem;
+  white-space: nowrap;
 }
