--- a/components/CheckApp/CheckApp.module.scss
+++ b/components/CheckApp/CheckApp.module.scss
@@ -9,6 +9,10 @@
   justify-content: center;
   background-color: rgba($color: #fff, $alpha: 0.5);
 
+  @include large_tablet {
+    padding-top: 0;
+  }
+
   &__wrapper {
     position: relative;
 
@@ -40,14 +44,15 @@
   position: relative;
   display: flex;
   justify-content: center;
+  width: 100%;
 
   margin-top: 3rem;
-  gap: 1rem;
   row-gap: 2rem;
 
   @include large_mobile {
     align-items: center;
     flex-direction: column;
+    row-gap: unset;
   }
 }
 
@@ -65,13 +70,13 @@
   padding: 1rem;
   width: 100%;
   gap: 1rem;
-
 }
 
 .button {
   width: 100%;
   height: 100%;
   box-shadow: var(--box-shadow-small);
+  justify-content: center;
 
   cursor: pointer;
   display: flex;
