--- a/components/Header/Navigation.module.scss
+++ b/components/Header/Navigation.module.scss
@@ -13,12 +13,13 @@
     background-color: var(--white);
     opacity: 0;
     pointer-events: none;
-    z-index: 5;
+    z-index: 4;
     box-shadow: 0 0.25rem 16px 0.25rem rgba(0, 0, 0, 0.1);
   }
 
   &_open {
     @include large_tablet {
+      opacity: 1;
       pointer-events: all;
       animation: fadeIn 0.5s forwards;
     }
@@ -63,6 +64,7 @@
     display: flex;
     gap: 0.5rem;
     align-items: center;
+    justify-content: center;
     background-color: transparent;
     border: none;
     outline: none;
