--- a/styles/helpers/normalize.scss
+++ b/styles/helpers/normalize.scss
@@ -42,7 +42,7 @@ input,
 label,
 a {
   -webkit-tap-highlight-color: transparent;
-  font-family: "Montserrat", "Verdana", "sans-serif";
+  font-family: "Montserrat", "sans-serif";
   font-size: 1rem;
   font-weight: 500;
   background-color: transparent;
