--- a/components/Contact/Contact.module.scss
+++ b/components/Contact/Contact.module.scss
@@ -22,7 +22,7 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  font-family: "Montserrat", "Verdana", "sans-serif";
+  font-family: "Montserrat", "sans-serif";
 
   max-width: 37.5rem;
   background-color: rgba($color: #fff, $alpha: 1);
