--- a/components/Header/Navigation.module.scss
+++ b/components/Header/Navigation.module.scss
@@ -16,6 +16,7 @@
     pointer-events: none;
     z-index: 4;
     box-shadow: 0 0.25rem 16px 0.25rem rgba(0, 0, 0, 0.1);
+    margin-right: unset;
   }
 
   &_open {
