--- a/components/Team/Team.module.scss
+++ b/components/Team/Team.module.scss
@@ -16,6 +16,7 @@
     padding: 4rem 2rem 2rem;
     gap: 1rem;
     max-width: 80rem;
+    width: calc(100vw - 1rem);
     border-radius: 0.5rem;
 
     background-color: rgba($color: #fff, $alpha: 1);
