--- a/components/Concept/Concept.module.scss
+++ b/components/Concept/Concept.module.scss
@@ -40,9 +40,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 2rem 0;
 }
 
 .image {
   width: 100%;
   object-fit: contain;
+  height: fit-content
 }
