--- a/styles/helpers/icons.scss
+++ b/styles/helpers/icons.scss
@@ -53,6 +53,22 @@
     background-image: url("../../public/assets/envelope.svg");
   }
 
+  &__spark {
+    background-image: url("../../public/assets/spark.svg");
+  }
+
+  &__globe {
+    background-image: url("../../public/assets/globe.svg");
+  }
+
+  &__cat_face {
+    background-image: url("../../public/assets/cat_face.svg");
+  }
+
+  &__cat_house {
+    background-image: url("../../public/assets/cat_house.svg");
+  }
+
   &__envelope_white {
     background-image: url("../../public/assets/envelope_white.svg");
   }
