--- a/components/Avatars/Avatars.module.scss
+++ b/components/Avatars/Avatars.module.scss
@@ -25,8 +25,8 @@
 
     @include large_tablet {
       align-items: center;
-      gap: unset;
       padding: 2rem 1rem;
+      gap: 1rem;
       flex-direction: column;
     }
 
@@ -65,4 +65,25 @@
 .image {
   width: 100%;
   object-fit: contain;
+}
+
+.motivation {
+  margin-top: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+  &__title {
+    margin-top: 0.5rem;
+    display: flex;
+    gap: 0.5rem;
+  }
+
+  &__list {
+    padding-left: 1rem;
+    list-style-type: disc;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
 }
