--- a/components/Benefit/Benefit.module.scss
+++ b/components/Benefit/Benefit.module.scss
@@ -8,17 +8,13 @@
   justify-content: center;
   padding: 5.5rem 0 0;
 
-  @include large_tablet {
-    padding: 0 0 5.5rem;
-  }
-
   &__wrapper {
     position: relative;
     width: calc(100vw - 1rem);
 
     display: flex;
     gap: 2rem;
-    max-width: 90rem;
+    max-width: 45rem;
     justify-content: center;
 
     padding: 2rem;
@@ -36,46 +32,20 @@
   }
 }
 
-.block {
+.list {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  padding: 2rem 0 1rem;
+  gap: 1rem;
+  padding: 1.5rem 0 0.5rem;
 
   @include tablet {
     gap: 1rem;
     padding-bottom: 0;
   }
-}
 
-.image {
-  width: 100%;
-  object-fit: contain;
-  height: fit-content
-}
-
-.text {
-  margin-top: 1rem;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  gap: 1rem;
-  text-align: center;
-
-  @include tablet {
-    grid-template-columns: 1fr;
-  }
-}
-
-.paragraph {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-
-  &__title {
+  &__item {
     display: flex;
-    align-items: center;
-    justify-content: center;
     gap: 0.5rem;
-    font-size: 1.15rem;
+    align-items: center;
   }
 }
