--- a/components/CheckApp/CheckApp.module.scss
+++ b/components/CheckApp/CheckApp.module.scss
@@ -3,15 +3,11 @@
 
 .container {
   cursor: default;
-  padding: 5.5rem 0 3rem;
+  padding: 3.5rem 0 3rem;
 
   display: flex;
   justify-content: center;
-  background-color: rgba($color: #fff, $alpha: 0.5);
-
-  @include large_tablet {
-    padding-bottom: 0;
-  }
+  background-color: rgba(255, 255, 255, 0.5);
 
   &__wrapper {
     position: relative;
@@ -20,13 +16,13 @@
     flex-direction: column;
     align-items: center;
     width: calc(100vw - 1rem);
-    max-width: 80rem;
+    max-width: 60rem;
     text-align: center;
     gap: 1rem;
-    padding: 1rem 1rem 2rem 1rem;
+    padding: 1rem 1rem 1rem 1rem;
     border-radius: 0.5rem;
-    box-shadow: var(--box-shadow-small);
     background-color: var(--white);
+    box-shadow: var(--box-shadow-small);
   }
 }
 
@@ -35,7 +31,6 @@
   display: flex;
   padding: 0 2rem;
 
-  margin-top: 3rem;
   row-gap: 2rem;
   width: 100%;
 
@@ -50,59 +45,14 @@
   }
 }
 
-.image {
-  width: 100%;
-  object-fit: contain;
-  height: fit-content;
-  max-width: 20rem;
-}
-
 .buttons {
+  cursor: pointer;
+
   display: flex;
   justify-content: center;
   padding: 1rem;
   width: 100%;
+
   gap: 1rem;
-
-  @include laptop {
-    flex-direction: column;
-  }
-}
-
-.button {
-  width: 100%;
-  height: 100%;
-  box-shadow: var(--box-shadow-small);
-  justify-content: center;
-
-  cursor: pointer;
-  display: flex;
-  align-self: flex-start;
   align-items: center;
-  gap: 0.5rem;
-
-  padding: 0.75rem 2rem;
-  border-radius: 0.25rem;
-  transition: all 0.5s;
-
-  background-size: 150%;
-
-  flex-direction: column;
-
-  @include laptop {
-    flex-direction: row;
-  }
-
-  &:focus {
-    box-shadow: var(--box-shadow-small-red);
-  }
-
-  & button, div {
-    cursor: pointer;
-  }
-  
-  @include large_mobile {
-    padding: 1rem 2rem;
-    width: 100%;
-  }
 }
