--- a/components/Concept/Concept.module.scss
+++ b/components/Concept/Concept.module.scss
@@ -51,7 +51,12 @@
 .image {
   width: 100%;
   object-fit: contain;
-  height: fit-content
+  height: fit-content;
+  padding: 0 4rem;
+
+  @include large_mobile {
+    padding: 0;
+  }
 }
 
 .text {
