--- a/components/Contact/Contact.module.scss
+++ b/components/Contact/Contact.module.scss
@@ -8,7 +8,7 @@
   flex-direction: column;
   align-items: center;
   background-color: rgba(243, 212, 212, 0.5);
-  padding: 5.5rem 0 4rem;
+  padding: 4rem 0;
   width: 100%;
 
   &__title {
